# QCA-AID

./: .CRUSH.md  .gitignore  CHANGELOG.md  KATEGORIEPRAEFERENZ_FIX.md  LICENSE  MODULE_INDEX.md  OUTPUT_DIR_FIX_SUMMARY.md  PHASE_1_CHECKLIST.md  PHASE_1_COMPLETE.txt  PHASE_2_COMPLETE.txt  QCA-AID-Codebook-Example.json  QCA-AID-Codebook.json  QCA-AID-Codebook.xlsx  QCA-AID-Explorer-Config.json  QCA-AID-Explorer-Config.xlsx  QCA-AID-Explorer.py  QCA-AID-Nutzerhandbuch.md  QCA-AID.py  QCA_ExportUtils.py  QCA_LLMProviders.py  QCA_Prompts.py  QCA_Utils.py  README.md  REFACTORING_COMPLETE.md  REFACTORING_FINAL_STATUS.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  REFACTORING_SUMMARY.txt  SPEICHER_ROBUSTHEIT_CHANGELOG.md  null  pyproject.toml  qca-aid-explorer-readme.md  requirements-explorer.txt  requirements.txt  setup.bat  setup_debug.bat  start.bat  start_QCA-AID-app.py  test_output.txt  test_output_dir_sync.py  (+1 more)
.github/: FUNDING.yml
QCA_AID_app/: CUSTOM_CSS_GUIDE.md  KONFIGURATION_ANLEITUNG.md  README.md  Start-QCA-AID-Webapp.bat  WEBAPP.md  __init__.py  start_webapp.py  webapp.py  webapp_performance_optimizations.py
QCA_AID_assets/: QCA_Prompts.py  QCA_Utils.py  __init__.py  __version__.py  cli.py  explorer.py  explorer_cli.py  main.py  main.py.backup  webapp_cli.py
docs/: API_DOCUMENTATION.md  CONFIGURATION_GUIDE.md  CUSTOM_CSS_GUIDE.md  CUSTOM_PROVIDER_GUIDE.md  DYNAMIC_CACHE_INTEGRATION.md  QCA-AID-Codebook-Example-Documentation.md  QCA-AID-Codebook-Example.json
input/: dummy_solar_media.txt  test_interview.txt
output/: QCA-AID_Analysis_INTERMEDIATE_abductive_20251117_102858.xlsx  QCA-AID_Analysis_INTERMEDIATE_abductive_20251117_105025.xlsx  QCA-AID_Analysis_INTERMEDIATE_deductive_20251117_195337.xlsx  QCA-AID_Analysis_INTERMEDIATE_deductive_20251117_223443.xlsx  QCA-AID_Analysis_INTERMEDIATE_deductive_20251117_224252.xlsx  QCA-AID_Analysis_INTERMEDIATE_deductive_20251117_225002.xlsx  QCA-AID_Analysis_abductive_20251117_101450.xlsx  QCA-AID_Analysis_abductive_20251117_102851.xlsx  QCA-AID_Analysis_abductive_20251117_105022.xlsx  QCA-AID_Analysis_abductive_20251117_111917.xlsx  QCA-AID_Analysis_deductive_20251117_192957.xlsx  QCA-AID_Analysis_deductive_20251117_195337.xlsx  QCA-AID_Analysis_deductive_20251127_135846.xlsx  codebook_inductive.json  codebook_intermediate_20251117_182218.json  codebook_intermediate_20251117_183142.json  (+34 more)
tests/: __init__.py  (+5 more)
(+178 files in other folders)
