[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qca-aid"
version = "0.13.0"
description = "QCA-AID: Qualitative Content Analysis mit KI-Unterstützung"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10,<3.13"
authors = [
    {name = "Justus Henke", email = "justus.henke@hof.uni-halle.de"}
]
keywords = [
    "qualitative-content-analysis",
    "mayring",
    "llm",
    "coding",
    "content-analysis",
    "ai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "anthropic>=0.39.0",
    "aiohttp>=3.9.0",
    "mistralai>=1.2.3",
    "openai>=1.54.5",
    "python-dotenv>=1.0.1",
    "tiktoken>=0.8.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "spacy>=3.7.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.8.0",
    "networkx>=3.2.0",
    "numpy>=1.26.0",
    "plotly>=5.18.0",
    "seaborn>=0.13.0",
    "squarify>=0.4.3",
    "tqdm>=4.67.0",
    "streamlit>=1.28.0",
    "packaging>=23.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
test = [
    "hypothesis>=6.90.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
]
pdf = [
    "PyMuPDF>=1.24.0",
    "reportlab>=4.0.0",
]

[project.scripts]
qcaaid = "QCA_AID_assets.cli:main"
qcaaid-explorer = "QCA_AID_assets.explorer_cli:main"
qcaaid-webapp = "QCA_AID_assets.webapp_cli:main"

[project.urls]
Homepage = "https://github.com/JustusHenke/QCA-AID"
Repository = "https://github.com/JustusHenke/QCA-AID"
Documentation = "https://github.com/JustusHenke/QCA-AID/blob/main/QCA-AID-Nutzerhandbuch.md"
"Bug Tracker" = "https://github.com/JustusHenke/QCA-AID/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["QCA_AID_assets*", "QCA_AID_app*"]

[tool.setuptools.package-data]
QCA_AID_assets = [
    "utils/llm/configs/**/*",
    "utils/llm/examples/**/*",
]
QCA_AID_app = [
    "examples/*.json",
]
